Fixed headshot alignment. Changed display to inline-table. Wrapped headshot text in paragraph tags.

--- a/PhiKappaPsi.css
+++ b/PhiKappaPsi.css
@@ -71,9 +71,8 @@ a:visited {
 .headshot {
 	text-align: center;
 	width: 240px;
-	height: 240px;
-	display: inline-block;
-	margin: 20px 20px 0 0;
+	display: inline-table;
+	margin: 10px 10px;
 }
 
 .headshot img {
@@ -81,6 +80,11 @@ a:visited {
 	margin: 0 auto;
 	width: 240px;
 	height: 240px;
+}
+
+.headshot p {
+	text-indent: 0;
+	margin-top: 6px;
 }
 
 /*
